Update gitignore and delete one other thought file

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 .env.production
 
 .thoughts.md
+/thoughts.md
+/*/thoughts.md
+*/thoughts.md
+
 .thoughts.txt
 .perfect_commit.sh
 /perfect_commit.sh
